; ModuleID = '/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_fileXio_cdvd.c_ps2fileXioDopen.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ps2/compat_files/extr_fileXio_cdvd.c_ps2fileXioDopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOOT_DEVICE_CDFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ps2fileXioDopen(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @getBootDeviceID(i8* %5)
  store i32 %6, i32* %3, align 4
  store i32 -1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @BOOT_DEVICE_CDFS, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @fileXioCDDopen(i8* %11)
  store i32 %12, i32* %4, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @fileXioDopen(i8* %14)
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local i32 @getBootDeviceID(i8*) #1

declare dso_local i32 @fileXioCDDopen(i8*) #1

declare dso_local i32 @fileXioDopen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
